--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,10 +4,10 @@
   "description": "Backend for the ToolSwap community sharing platform",
   "main": "index.js",
   "type": "module",
-"scripts": {
-  "start": "node index.js",
-  "dev": "cross-env NODE_ENV=development nodemon index.js"
-},
+  "scripts": {
+    "start": "node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js"
+  },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.3",
@@ -20,7 +20,8 @@
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "node-cron": "^3.0.3",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.2"
