--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,11 +17,8 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
-    "multer": "^1.4.5-lts.1",
-    "multer-storage-cloudinary": "^4.0.0",
-    "node-cron": "^3.0.3",
-    "socket.io": "^4.7.5",
-    "socket.io-client": "^4.8.1"
+    "multer": "1.4.4-lts.1",
+    "multer-storage-cloudinary": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.2"
